--- a/app/views/index.html
+++ b/app/views/index.html
@@ -9,7 +9,7 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds govuk-!-padding-bottom-9">
-      <h1 class="govuk-heading-xl">
+      <h1 class="govuk-heading-l">
         PSD Prototype
       </h1>{{releaseVersion | log }}
 
@@ -31,47 +31,53 @@
 
       <p class="govuk-body">Additional <b>CSS/SASS</b> styles: app/assets/sass/application.scss</p>
 
-      <h2 class="govuk-heading-m"><abbr>PSD</abbr> designs</h2>
+      <h2 class="govuk-heading-l govuk-!-margin-top-9"><abbr>PSD</abbr> designs</h2>
+
+      <h3 class="govuk-heading-m">Change the case owner</h3>
 
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="/case-owner-change-page/improve-case-owner-change-page">Improve case owner change page (HTML)</a></li>
         <li><a href="/case-owner-change-page/improve-case-owner-change-page-error">Improve case owner change page (HTML) errors</a></li>
       </ul>
 
-      <hr>
+      <h3 class="govuk-heading-m">Add product - flow</h3>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li><a class="govuk-link" href="/add-product-v4/start.html"><b>Start flow</b>: Add Product v4.1 designs (updating v3)</a></li>
+        <li><a class="govuk-link" href="/add-product-v4/start.html"><b>Start flow</b>: Add Product v4.1 designs (updating v3)</a>
 
-          <ul class="govuk-list govuk-list--bullet">
+          <!--ul class="govuk-list govuk-list--bullet">
             <li><a class="govuk-link strike" href="/add-product-v4/choose-a-product-list-01.html">Choose a product list 01 (without images)</a></li>
             <li><a class="govuk-link strike" href="/add-product-v4/choose-a-product-list-02.html">Choose a product list 02 (with images)</a></li>
             <li><a class="govuk-link strike" href="/add-product-v4/choose-a-product-list-03.html">Choose a product list 03 (HTML list, with images)</a></li>
             <li><a class="govuk-link strike" href="/add-product-v4/select-a-product-list-04.html">Select a product list 04 (HTML list, without images)</a></li>
             <li><a class="govuk-link strike" href="/add-product-v4/select-a-product-old.html">Select a product (old)</a></li>
             <li><a class="govuk-link strike" href="/add-product-v4/select-a-product-links.html">Select a product (as links)</a></li>
-          </ul>
+          </ul-->
+
+          </li>
 
       </ul>
 
-      <hr>
+      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-      <h2 class="govuk-heading-m"><abbr>SCNP</abbr>/Cosmetics designs</h2>
+      <h2 class="govuk-heading-l"><abbr>SCNP</abbr>/Cosmetics designs</h2>
+
+      <h3 class="govuk-heading-m">Search &amp; Results</h3>
+
       <ul class="govuk-list govuk-list--bullet">
-        <li>Cosmentics search results page</li>
-
+        <li>Cosmentics search results page
           <ul class="govuk-list govuk-list--bullet">
             <li><a class="govuk-link" href="/cosmetics-search-designs/search-page-01.html">#1132 Search page design</a></li>
             <li><a class="govuk-link" href="/cosmetics-search-designs/search-page-01-error.html">#1132 Search page design with errors</a></li>
             <li><a class="govuk-link" href="/cosmetics-search-designs/form-behaviours.txt">#1132 notes about the form(s)</a></li>
           </ul>
-
+        </li>
       </ul>
 
-      <h2 class="govuk-heading-m">Nanomaterials</h2>
+      <h3 class="govuk-heading-m">Nanomaterials</h3>
       <ul class="govuk-list govuk-list--bullet">
         <li><a class="govuk-link" href="/nanomaterials-1149/nanomaterials.html">Nanomaterials</a></li>
-        <li><a class="govuk-link" href="/nanomaterials-1149/nanomaterials-details.html">Nanomaterials details</a></li>
+        <li><a class="govuk-link" href="/nanomaterials-1149/nanomaterial-details.html">Nanomaterial details</a></li>
       </ul>
 
 
