--- a/app/views/nanomaterials-1149/nanomaterials.html
+++ b/app/views/nanomaterials-1149/nanomaterials.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-<div class="govuk-grid-row">
+<div class="govuk-grid-row govuk-!-margin-top-6 govuk-!-margin-bottom-5">
     <div class="govuk-grid-column-full">
 
         <div class="govuk-grid-row">
@@ -38,8 +38,8 @@
         </h2>
       </div>
       <div class="govuk-grid-column-one-half">
-        <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-14 opss-text-align-right">
-          Download a <abbr>CSV</abbr> of notified nanomaterials
+        <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-14 opss-text-align-right" download>
+          <span class="opss-download-link-sm"></span>Download a <abbr title="Comma-Separated Values">CSV</abbr> file of notified nanomaterials
         </a>
       </div>
     </div>
@@ -47,12 +47,12 @@
     <ul class="govuk-list opss-list--borders opss-list--borders-no-top">
       <li>
         <h2 class="govuk-heading-s">
-          <a class="govuk-link" href="/notifications/99737442">CTPA moisture conditioner</a>
+          <a class="govuk-link govuk-link--no-visited-state" href="nanomaterial-details.html">Foraminifera</a>
         </h2>
         <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list opss-summary-list--small">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              First notified in the <abbr>UK</abbr>
+              Notified in the <abbr title="Comma-Separated Values">UK</abbr>
             </dt>
             <dd class="govuk-summary-list__value">
               4 May 2021
@@ -60,7 +60,7 @@
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Notified in <abbr>EU</abbr>
+              Notified in the <abbr>EU</abbr>
             </dt>
             <dd class="govuk-summary-list__value">
               No
@@ -78,12 +78,12 @@
       </li>
       <li>
         <h2 class="govuk-heading-s">
-          <a class="govuk-link" href="/notifications/3600065">CSV with no internal reference</a>
+          <a class="govuk-link govuk-link--no-visited-state" href="nanomaterial-details.html">CSV with no internal reference</a>
         </h2>
         <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list opss-summary-list--small">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              First notified in the <abbr>UK</abbr>
+              Notified in the <abbr>UK</abbr>
             </dt>
             <dd class="govuk-summary-list__value">
               11 May 2021
@@ -91,7 +91,7 @@
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Notified in <abbr>EU</abbr>
+              Notified in the <abbr>EU</abbr>
             </dt>
             <dd class="govuk-summary-list__value">
               No
@@ -109,12 +109,12 @@
       </li>
       <li>
         <h2 class="govuk-heading-s">
-          <a class="govuk-link" href="/notifications/19414346">Multi-component Frame formulation Nano</a>
+          <a class="govuk-link govuk-link--no-visited-state" href="nanomaterial-details.html">Multi-component Frame formulation Nano</a>
         </h2>
         <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list opss-summary-list--small">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              First notified in the <abbr>UK</abbr>
+              Notified in the <abbr>UK</abbr>
             </dt>
             <dd class="govuk-summary-list__value">
               13 May 2021
@@ -122,7 +122,7 @@
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Notified in <abbr>EU</abbr>
+              Notified in the <abbr>EU</abbr>
             </dt>
             <dd class="govuk-summary-list__value">
               17 April 2017
@@ -140,12 +140,12 @@
       </li>
       <li>
         <h2 class="govuk-heading-s">
-          <a class="govuk-link" href="/notifications/12446312">Multi-Item-Range Doc_pH </a>
+          <a class="govuk-link govuk-link--no-visited-state" href="nanomaterial-details.html">Multi-Item-Range Doc_pH </a>
         </h2>
         <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list opss-summary-list--small">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              First notified in the <abbr>UK</abbr>
+              Notified in the <abbr>UK</abbr>
             </dt>
             <dd class="govuk-summary-list__value">
               4 May 2021
@@ -153,7 +153,7 @@
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Notified in <abbr>EU</abbr>
+              Notified in the <abbr>EU</abbr>
             </dt>
             <dd class="govuk-summary-list__value">
               13 September 2019
@@ -171,12 +171,12 @@
       </li>
       <li>
         <h2 class="govuk-heading-s">
-          <a class="govuk-link" href="/notifications/2933316">SingleItem-CMRs+Nano</a>
+          <a class="govuk-link govuk-link--no-visited-state" href="nanomaterial-details.html">SingleItem-CMRs+Nano</a>
         </h2>
         <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list opss-summary-list--small">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              First notified in the <abbr>UK</abbr>
+              Notified in the <abbr>UK</abbr>
             </dt>
             <dd class="govuk-summary-list__value">
               13 May 2021
@@ -184,7 +184,7 @@
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Notified in <abbr>EU</abbr>
+              Notified in the <abbr>EU</abbr>
             </dt>
             <dd class="govuk-summary-list__value">
               No
@@ -202,12 +202,12 @@
       </li>
       <li>
         <h2 class="govuk-heading-s">
-          <a class="govuk-link" href="/notifications/39954534">Test product1</a>
+          <a class="govuk-link govuk-link--no-visited-state" href="nanomaterial-details.html">Test product1</a>
         </h2>
         <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list opss-summary-list--small">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              First notified in the <abbr>UK</abbr>
+              Notified in the <abbr>UK</abbr>
             </dt>
             <dd class="govuk-summary-list__value">
               4 May 2021
@@ -215,7 +215,7 @@
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Notified in <abbr>EU</abbr>
+              Notified in the <abbr>EU</abbr>
             </dt>
             <dd class="govuk-summary-list__value">
               No
@@ -233,12 +233,12 @@
       </li>
       <li>
         <h2 class="govuk-heading-s">
-          <a class="govuk-link" href="/notifications/27683733">Test export notifications</a>
+          <a class="govuk-link govuk-link--no-visited-state" href="nanomaterial-details.html">Test export notifications</a>
         </h2>
         <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list opss-summary-list--small">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              First notified in the <abbr>UK</abbr>
+              Notified in the <abbr>UK</abbr>
             </dt>
             <dd class="govuk-summary-list__value">
               11 May 2021
@@ -246,7 +246,7 @@
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Notified in <abbr>EU</abbr>
+              Notified in the <abbr>EU</abbr>
             </dt>
             <dd class="govuk-summary-list__value">
               23 August 2016
@@ -278,7 +278,6 @@
             </li>
         </ul>
     </nav>
-
 
   </section>
 </div>
