--- a/app/views/opss-nav.html
+++ b/app/views/opss-nav.html
@@ -10,7 +10,7 @@
         <a class="govuk-link govuk-link--no-visited-state" href="/responsible_persons/628/notifications">Cosmetic products</a>
       </li>
       <li class="opss-top-nav__item--active">
-        <a class="govuk-link govuk-link--no-visited-state" href="/responsible_persons/628/nanomaterials">Nanomaterials</a>
+        <a aria-current="page" class="govuk-link govuk-link--no-visited-state" href="/responsible_persons/628/nanomaterials">Nanomaterials</a>
       </li>
       <li>
         <a class="govuk-link govuk-link--no-visited-state" href="/responsible_persons/628">Responsible person</a>
