Nanomaterials page variations

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -80,6 +80,13 @@
         <li><a class="govuk-link" href="/nanomaterials-1149/nanomaterial-details.html">Nanomaterial details</a></li>
       </ul>
 
+      <h3 class="govuk-heading-s">Nanomaterials with account bar</h3>
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a class="govuk-link" href="/nanomaterials-1149/nanomaterials-beta.html">Nanomaterials - with account bar</a></li>
+        <li><a class="govuk-link" href="/nanomaterials-1149/nanomaterial-details-beta.html">Nanomaterial details - with account bar</a></li>
+        <li><a class="govuk-link" href="/nanomaterials-1149/nanomaterials-beta-nobeta.html">Nanomaterial - with account bar &amp; no beta banner</a></li>
+      </ul>
+
 
 
     </div>
