--- a/app/views/nanomaterials-1149/nanomaterial-details-beta.html
+++ b/app/views/nanomaterials-1149/nanomaterial-details-beta.html
@@ -1,4 +1,4 @@
-{% extends "layout-02-noacc.html" %}
+{% extends "layout-02-beta.html" %}
 
 {% block pageTitle %}
     Foraminifera
@@ -7,7 +7,7 @@
 {% block beforeContent %}
     {{ govukBackLink({
       text: "Back",
-      href: "nanomaterials"
+      href: "nanomaterials-beta"
     }) }}
 {% endblock %}
 
