--- a/app/views/nanomaterials-1149/nanomaterials-beta-nobeta.html
+++ b/app/views/nanomaterials-1149/nanomaterials-beta-nobeta.html
@@ -1,4 +1,4 @@
-{% extends "layout-02-noacc.html" %}
+{% extends "layout-02-beta-nobeta.html" %}
 
 {% block pageTitle %}
     Nanomaterials
@@ -47,7 +47,7 @@
     <ul class="govuk-list opss-list--borders opss-list--borders-no-top">
       <li>
         <h2 class="govuk-heading-s">
-          <a class="govuk-link govuk-link--no-visited-state" href="nanomaterial-details.html">Foraminifera</a>
+          <a class="govuk-link govuk-link--no-visited-state" href="#">Foraminifera</a>
         </h2>
         <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list opss-summary-list--small">
           <div class="govuk-summary-list__row">
@@ -78,7 +78,7 @@
       </li>
       <li>
         <h2 class="govuk-heading-s">
-          <a class="govuk-link govuk-link--no-visited-state" href="nanomaterial-details.html">CSV with no internal reference</a>
+          <a class="govuk-link govuk-link--no-visited-state" href="#">CSV with no internal reference</a>
         </h2>
         <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list opss-summary-list--small">
           <div class="govuk-summary-list__row">
@@ -109,7 +109,7 @@
       </li>
       <li>
         <h2 class="govuk-heading-s">
-          <a class="govuk-link govuk-link--no-visited-state" href="nanomaterial-details.html">Multi-component Frame formulation Nano</a>
+          <a class="govuk-link govuk-link--no-visited-state" href="#">Multi-component Frame formulation Nano</a>
         </h2>
         <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list opss-summary-list--small">
           <div class="govuk-summary-list__row">
@@ -140,7 +140,7 @@
       </li>
       <li>
         <h2 class="govuk-heading-s">
-          <a class="govuk-link govuk-link--no-visited-state" href="nanomaterial-details.html">Multi-Item-Range Doc_pH </a>
+          <a class="govuk-link govuk-link--no-visited-state" href="#">Multi-Item-Range Doc_pH </a>
         </h2>
         <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list opss-summary-list--small">
           <div class="govuk-summary-list__row">
@@ -171,7 +171,7 @@
       </li>
       <li>
         <h2 class="govuk-heading-s">
-          <a class="govuk-link govuk-link--no-visited-state" href="nanomaterial-details.html">SingleItem-CMRs+Nano</a>
+          <a class="govuk-link govuk-link--no-visited-state" href="#">SingleItem-CMRs+Nano</a>
         </h2>
         <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list opss-summary-list--small">
           <div class="govuk-summary-list__row">
@@ -202,7 +202,7 @@
       </li>
       <li>
         <h2 class="govuk-heading-s">
-          <a class="govuk-link govuk-link--no-visited-state" href="nanomaterial-details.html">Test product1</a>
+          <a class="govuk-link govuk-link--no-visited-state" href="#">Test product1</a>
         </h2>
         <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list opss-summary-list--small">
           <div class="govuk-summary-list__row">
@@ -233,7 +233,7 @@
       </li>
       <li>
         <h2 class="govuk-heading-s">
-          <a class="govuk-link govuk-link--no-visited-state" href="nanomaterial-details.html">Test export notifications</a>
+          <a class="govuk-link govuk-link--no-visited-state" href="#">Test export notifications</a>
         </h2>
         <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list opss-summary-list--small">
           <div class="govuk-summary-list__row">
