--- a/app/views/nanomaterials-1149/nanomaterial-details-beta.html
+++ b/app/views/nanomaterials-1149/nanomaterial-details-beta.html
@@ -14,7 +14,7 @@
 {% block content %}
 
 
-<div class="govuk-grid-row xxxgovuk-!-margin-top-6 xxxgovuk-!-margin-bottom-5">
+<div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
         <h1 class="govuk-heading-m">
