--- a/app/views/nanomaterials-1149/nanomaterials.html
+++ b/app/views/nanomaterials-1149/nanomaterials.html
@@ -7,16 +7,16 @@
 
 {% block content %}
 
-<div class="govuk-grid-row govuk-!-margin-top-6 govuk-!-margin-bottom-5">
+<div class="govuk-grid-row govuk-!-margin-top-2">
     <div class="govuk-grid-column-full">
 
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-two-thirds">
-            <h1 class="govuk-heading-l">
-              Nanomaterials
+            <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
+              Notified nanomaterials
             </h1>
           </div>
-          <div class="govuk-grid-column-one-third">
+          <div class="govuk-grid-column-one-third govuk-!-margin-bottom-2">
             <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
               Add a nanomaterial
             </a>
@@ -26,23 +26,16 @@
     </div>
 </div>
 
-<hr class="govuk-section-break govuk-section-break--l govuk-!-margin-bottom-5 govuk-section-break--visible">
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-full">
+    <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-14 opss-text-align-right" download>
+      <span class="opss-download-link-sm"></span>Download a <abbr title="Comma-Separated Values">CSV</abbr> file of notified nanomaterials
+    </a>
+  </div>
+</div>
 
 <div class="govuk-grid-row">
   <section class="govuk-grid-column-full">
-
-    <div class="govuk-grid-row">
-      <div class="govuk-grid-column-one-half">
-        <h2 class="govuk-heading-s">
-          Notified nanomaterials
-        </h2>
-      </div>
-      <div class="govuk-grid-column-one-half">
-        <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-14 opss-text-align-right" download>
-          <span class="opss-download-link-sm"></span>Download a <abbr title="Comma-Separated Values">CSV</abbr> file of notified nanomaterials
-        </a>
-      </div>
-    </div>
 
     <ul class="govuk-list opss-list--borders opss-list--borders-no-top">
       <li>
