--- a/app/views/add-product-v4/upload-a-product-image.html
+++ b/app/views/add-product-v4/upload-a-product-image.html
@@ -37,7 +37,7 @@
                 Do not upload case images related to damage or incidents.
             </div>
             <div class="govuk-!-padding-top-1">
-                <input type="file" id="uploadfile" name="uploadfile" aria-describedby="uploadfile-hint">
+                <input type="file" id="uploadfile" class="govuk-file-upload" name="uploadfile" aria-describedby="uploadfile-hint">
             </div>
         </div>
 
