--- a/app/views/nanomaterials-1149/nanomaterial-details-beta.html
+++ b/app/views/nanomaterials-1149/nanomaterial-details-beta.html
@@ -17,7 +17,7 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
-        <h1 class="govuk-heading-m">
+        <h1 class="govuk-heading-l">
              Foraminifera
         </h1>
 
