--- a/app/views/nanomaterials-1149/nanomaterials.html
+++ b/app/views/nanomaterials-1149/nanomaterials.html
@@ -7,13 +7,13 @@
 
 {% block content %}
 
-<div class="govuk-grid-row govuk-!-margin-top-2">
+<div class="govuk-grid-row govuk-!-margin-top-4">
     <div class="govuk-grid-column-full">
 
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-two-thirds">
             <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
-              Notified nanomaterials
+              Nanomaterials
             </h1>
           </div>
           <div class="govuk-grid-column-one-third govuk-!-margin-bottom-2">
@@ -243,6 +243,161 @@
             </dt>
             <dd class="govuk-summary-list__value">
               23 August 2016
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+            <abbr>UK</abbr> nanomaterial number
+            </dt>
+            <dd class="govuk-summary-list__value">
+              15766863112607598
+            </dd>
+          </div>
+        </dl>
+      </li>
+      <li>
+        <h2 class="govuk-heading-s">
+          <a class="govuk-link govuk-link--no-visited-state" href="nanomaterial-details.html">CSV with no internal reference</a>
+        </h2>
+        <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list opss-summary-list--small">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Notified in the <abbr>UK</abbr>
+            </dt>
+            <dd class="govuk-summary-list__value">
+              11 May 2021
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Notified in the <abbr>EU</abbr>
+            </dt>
+            <dd class="govuk-summary-list__value">
+              No
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+            <abbr>UK</abbr> nanomaterial number
+            </dt>
+            <dd class="govuk-summary-list__value">
+              15766863112607598
+            </dd>
+          </div>
+        </dl>
+      </li>
+      <li>
+        <h2 class="govuk-heading-s">
+          <a class="govuk-link govuk-link--no-visited-state" href="nanomaterial-details.html">SingleItem-CMRs+Nano</a>
+        </h2>
+        <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list opss-summary-list--small">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Notified in the <abbr>UK</abbr>
+            </dt>
+            <dd class="govuk-summary-list__value">
+              13 May 2021
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Notified in the <abbr>EU</abbr>
+            </dt>
+            <dd class="govuk-summary-list__value">
+              No
+            </dd>
+          </div>
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__key">
+              <abbr>UK</abbr> nanomaterial number
+              </dt>
+              <dd class="govuk-summary-list__value">
+                157668631177685
+              </dd>
+            </div>
+        </dl>
+      </li>
+      <li>
+        <h2 class="govuk-heading-s">
+          <a class="govuk-link govuk-link--no-visited-state" href="nanomaterial-details.html">Test product1</a>
+        </h2>
+        <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list opss-summary-list--small">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Notified in the <abbr>UK</abbr>
+            </dt>
+            <dd class="govuk-summary-list__value">
+              4 May 2021
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Notified in the <abbr>EU</abbr>
+            </dt>
+            <dd class="govuk-summary-list__value">
+              No
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+            <abbr>UK</abbr> nanomaterial number
+            </dt>
+            <dd class="govuk-summary-list__value">
+              15766863112607598
+            </dd>
+          </div>
+        </dl>
+      </li>
+      <li>
+        <h2 class="govuk-heading-s">
+          <a class="govuk-link govuk-link--no-visited-state" href="nanomaterial-details.html">Test export notifications</a>
+        </h2>
+        <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list opss-summary-list--small">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Notified in the <abbr>UK</abbr>
+            </dt>
+            <dd class="govuk-summary-list__value">
+              11 May 2021
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Notified in the <abbr>EU</abbr>
+            </dt>
+            <dd class="govuk-summary-list__value">
+              23 August 2016
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+            <abbr>UK</abbr> nanomaterial number
+            </dt>
+            <dd class="govuk-summary-list__value">
+              15766863112607598
+            </dd>
+          </div>
+        </dl>
+      </li>
+      <li>
+        <h2 class="govuk-heading-s">
+          <a class="govuk-link govuk-link--no-visited-state" href="nanomaterial-details.html">CSV with no internal reference</a>
+        </h2>
+        <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list opss-summary-list--small">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Notified in the <abbr>UK</abbr>
+            </dt>
+            <dd class="govuk-summary-list__value">
+              11 May 2021
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Notified in the <abbr>EU</abbr>
+            </dt>
+            <dd class="govuk-summary-list__value">
+              No
             </dd>
           </div>
           <div class="govuk-summary-list__row">
