--- a/app/views/opss-nav.html
+++ b/app/views/opss-nav.html
@@ -7,16 +7,16 @@
   <nav class="govuk-width-container" aria-label="Main">
     <ul class="opss-top-nav">
       <li>
-        <a class="govuk-link govuk-link--no-visited-state" href="/responsible_persons/628/notifications">Cosmetic products</a>
+        <a class="govuk-link govuk-link--no-visited-state" href="cosmetic-products">Cosmetic products</a>
       </li>
       <li class="opss-top-nav__item--active">
-        <a aria-current="page" class="govuk-link govuk-link--no-visited-state" href="/responsible_persons/628/nanomaterials">Nanomaterials</a>
+        <a aria-current="page" class="govuk-link govuk-link--no-visited-state" href="nanomaterials">Nanomaterials</a>
       </li>
       <li>
-        <a class="govuk-link govuk-link--no-visited-state" href="/responsible_persons/628">Responsible person</a>
+        <a class="govuk-link govuk-link--no-visited-state" href="responsible-person">Responsible person</a>
       </li>
       <li>
-        <a class="govuk-link--no-visited-state" href="/responsible_persons/628/team_members">Team members</a>
+        <a class="govuk-link--no-visited-state" href="team-members">Team members</a>
       </li>
     </ul>
   </nav>
