--- a/app/views/add-product-v4/upload-a-product-image-error.html
+++ b/app/views/add-product-v4/upload-a-product-image-error.html
@@ -76,7 +76,7 @@
               <span class="govuk-visually-hidden">Error:</span> Choose an image file to upload
           </span>
           <div class="govuk-!-padding-top-1">
-              <input type="file" id="uploadfile" name="uploadfile" aria-describedby="uploadfile-hint uploadfile-error">
+              <input type="file" id="uploadfile" class="govuk-file-upload" name="uploadfile" aria-describedby="uploadfile-hint uploadfile-error">
           </div>
       </div>
 
