--- a/app/views/index.html
+++ b/app/views/index.html
@@ -14,15 +14,15 @@
       </h1>{{releaseVersion | log }}
 
       <ol class="govuk-list govuk-list--number">
-        <li><a class="govuk-link" href="/add-product/counterfeit">Add Product</a></li>
-        <li><a class="govuk-link" href="/product-categoriser">Product Categoriser</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="/add-product/counterfeit">Add Product</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="/product-categoriser">Product Categoriser</a></li>
       </ol>
 
 
       <span class="govuk-caption-m">Design changes from Nov 2020 onwards </span>
       <ol class="govuk-list govuk-list--number">
-        <li><a class="govuk-link" href="#"></a> WIP 1</li>
-        <li><a class="govuk-link" href="#"></a> WIP 2</li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="#"></a> WIP 1</li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="#"></a> WIP 2</li>
       </ol>
 
       <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
@@ -43,15 +43,15 @@
       <h3 class="govuk-heading-m">Add product - flow</h3>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li><a class="govuk-link" href="/add-product-v4/start.html"><b>Start flow</b>: Add Product v4.1 designs (updating v3)</a>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="/add-product-v4/start.html"><b>Start flow</b>: Add Product v4.1 designs (updating v3)</a>
 
           <!--ul class="govuk-list govuk-list--bullet">
-            <li><a class="govuk-link strike" href="/add-product-v4/choose-a-product-list-01.html">Choose a product list 01 (without images)</a></li>
-            <li><a class="govuk-link strike" href="/add-product-v4/choose-a-product-list-02.html">Choose a product list 02 (with images)</a></li>
-            <li><a class="govuk-link strike" href="/add-product-v4/choose-a-product-list-03.html">Choose a product list 03 (HTML list, with images)</a></li>
-            <li><a class="govuk-link strike" href="/add-product-v4/select-a-product-list-04.html">Select a product list 04 (HTML list, without images)</a></li>
-            <li><a class="govuk-link strike" href="/add-product-v4/select-a-product-old.html">Select a product (old)</a></li>
-            <li><a class="govuk-link strike" href="/add-product-v4/select-a-product-links.html">Select a product (as links)</a></li>
+            <li><a class="govuk-link govuk-link--no-visited-state strike" href="/add-product-v4/choose-a-product-list-01.html">Choose a product list 01 (without images)</a></li>
+            <li><a class="govuk-link govuk-link--no-visited-state strike" href="/add-product-v4/choose-a-product-list-02.html">Choose a product list 02 (with images)</a></li>
+            <li><a class="govuk-link govuk-link--no-visited-state strike" href="/add-product-v4/choose-a-product-list-03.html">Choose a product list 03 (HTML list, with images)</a></li>
+            <li><a class="govuk-link govuk-link--no-visited-state strike" href="/add-product-v4/select-a-product-list-04.html">Select a product list 04 (HTML list, without images)</a></li>
+            <li><a class="govuk-link govuk-link--no-visited-state strike" href="/add-product-v4/select-a-product-old.html">Select a product (old)</a></li>
+            <li><a class="govuk-link govuk-link--no-visited-state strike" href="/add-product-v4/select-a-product-links.html">Select a product (as links)</a></li>
           </ul-->
 
           </li>
@@ -67,24 +67,32 @@
       <ul class="govuk-list govuk-list--bullet">
         <li>Cosmentics search results page
           <ul class="govuk-list govuk-list--bullet">
-            <li><a class="govuk-link" href="/cosmetics-search-designs/search-page-01.html">#1132 Search page design</a></li>
-            <li><a class="govuk-link" href="/cosmetics-search-designs/search-page-01-error.html">#1132 Search page design with errors</a></li>
-            <li><a class="govuk-link" href="/cosmetics-search-designs/form-behaviours.txt">#1132 notes about the form(s)</a></li>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-search-designs/search-page-01.html">#1132 Search page design</a></li>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-search-designs/search-page-01-error.html">#1132 Search page design with errors</a></li>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-search-designs/form-behaviours.txt">#1132 notes about the form(s)</a></li>
           </ul>
         </li>
       </ul>
 
       <h3 class="govuk-heading-m">Nanomaterials</h3>
+      <p class="govuk-body-s">For these flat HTML files the nav active state is set to the nanomaterials page.</p>
       <ul class="govuk-list govuk-list--bullet">
-        <li><a class="govuk-link" href="/nanomaterials-1149/nanomaterials.html">Nanomaterials</a></li>
-        <li><a class="govuk-link" href="/nanomaterials-1149/nanomaterial-details.html">Nanomaterial details</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products.html">Cosmetic products</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterials.html">Nanomaterials</a>
+          <ul class="govuk-list govuk-list--bullet">
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterial-details.html">Nanomaterial details</a></li>
+          </ul>
+        </li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/responsible-person.html">Responsible person</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/team-members.html">Team members</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products-success.html">Cosmetic products - success banner</a></li>
       </ul>
 
       <h3 class="govuk-heading-s">Nanomaterials with account bar</h3>
       <ul class="govuk-list govuk-list--bullet">
-        <li><a class="govuk-link" href="/nanomaterials-1149/nanomaterials-beta.html">Nanomaterials - with account bar</a></li>
-        <li><a class="govuk-link" href="/nanomaterials-1149/nanomaterial-details-beta.html">Nanomaterial details - with account bar</a></li>
-        <li><a class="govuk-link" href="/nanomaterials-1149/nanomaterials-beta-nobeta.html">Nanomaterial - with account bar &amp; no beta banner</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterials-beta.html">Nanomaterials - with account bar</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterial-details-beta.html">Nanomaterial details - with account bar</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterials-beta-nobeta.html">Nanomaterial - with account bar &amp; no beta banner</a></li>
       </ul>
 
 
