--- a/app/views/nanomaterials-1149/nanomaterials.html
+++ b/app/views/nanomaterials-1149/nanomaterials.html
@@ -12,7 +12,7 @@
 
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-two-thirds">
-            <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
+            <h1 class="govuk-heading-l govuk-!-margin-bottom-2" aria-describedby="nanomaterials-hint">
               Nanomaterials
             </h1>
           </div>
@@ -21,6 +21,13 @@
               Add a nanomaterial
             </a>
           </div>
+        </div>
+        <div class="govuk-grid-row">
+            <div class="govuk-grid-column-full">
+                <p id="nanomaterials-hint" class="govuk-hint govuk-!-font-size-16">
+                  These are your notified nanomaterials.
+                </p>
+            </div>
         </div>
 
     </div>
@@ -37,7 +44,7 @@
 <div class="govuk-grid-row">
   <section class="govuk-grid-column-full">
 
-    <ul class="govuk-list opss-list--borders opss-list--borders-no-top">
+    <ul class="govuk-list opss-list--borders govuk-!-margin-top-5">
       <li>
         <h2 class="govuk-heading-s">
           <a class="govuk-link govuk-link--no-visited-state" href="nanomaterial-details.html">Foraminifera</a>
