--- a/app/views/nanomaterials-1149/responsible-person.html
+++ b/app/views/nanomaterials-1149/responsible-person.html
@@ -17,6 +17,7 @@
             </h1>
           </div>
           <div class="govuk-grid-column-one-third govuk-!-margin-bottom-2">
+            <!--*** link text is "Add a responsible person" if there aren't any ***-->
             <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
               Change the responsible person
             </a>
@@ -26,7 +27,7 @@
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-full">
                 <p id="responsible-person-hint" class="govuk-hint govuk-!-font-size-16">
-                    The responsible person can be a business, individual or sole trader and has one person listed as the contact.
+                    The responsible person can be a business, individual or sole trader and has one or more people assigned as a contact.
                 </p>
             </div>
         </div>
