--- a/app/views/nanomaterials-1149/team-members.html
+++ b/app/views/nanomaterials-1149/team-members.html
@@ -80,6 +80,17 @@
       {
         text: "Joan Briggs"
       }
+    ],
+    [
+      {
+        html: '<span class="govuk-!-font-weight-regular">Graham Coals<span class="govuk-visually-hidden">:</span> <br><span class="govuk-!-font-size-16">Awaiting confirmation</span></span>'
+      },
+      {
+        html: '<a href="mailto:jessicacoalsworth" class="govuk-link govuk-link--no-visited-state">gc-office@gmail.co.uk</a> <br><a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 govuk-!-font-weight-bold">Resend invitation<span class="govuk-visually-hidden"> to Graham Coals</span></a>'
+      },
+      {
+        html: 'Joan Briggs'
+      }
     ]
   ]
 }) }}
@@ -87,7 +98,7 @@
 <hr class="govuk-section-break govuk-section-break--l">
 
 <p class="govuk-body-s">
-  For help managing team member accounts (including removing a member) please email <a class="govuk-link govuk-link--no-visited-state" href="mailto:opss.enquiries@beis.gov.uk">opss.enquiries@beis.gov.uk</a>.
+  For help managing team member accounts email <a class="govuk-link govuk-link--no-visited-state" href="mailto:opss.enquiries@beis.gov.uk">opss.enquiries@beis.gov.uk</a>.
 </p>
 
     </div>
