--- a/app/views/nanomaterials-1149/cosmetic-products.html
+++ b/app/views/nanomaterials-1149/cosmetic-products.html
@@ -12,8 +12,8 @@
 
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-two-thirds">
-            <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
-              Your cosmetic products
+            <h1 class="govuk-heading-l govuk-!-margin-bottom-2" aria-describedby="cosmetic-products-hint">
+              Cosmetic products
             </h1>
           </div>
           <div class="govuk-grid-column-one-third govuk-!-margin-bottom-2">
@@ -22,6 +22,13 @@
             </a>
           </div>
         </div>
+        <div class="govuk-grid-row">
+            <div class="govuk-grid-column-full">
+                <p id="cosmetic-products-hint" class="govuk-hint govuk-!-font-size-16">
+                  These are your notified cosmetic products.
+                </p>
+            </div>
+        </div>
 
     </div>
 </div>
@@ -29,55 +36,76 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
-
+<!-- *** if a product has two upload errors, list it twice (repeated on two rows) ** -->
 
 {% set errorsHtml %}
-<h2 class="govuk-heading-m">Errors</h2>
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    <h2 class="govuk-heading-m">Errors</h2>
+  </div>
+  <div class="govuk-grid-column-one-third govuk-!-margin-bottom-2">
+    <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-14 opss-text-align-right">
+      Dismiss all error messages
+    </a>
+  </div>
+</div>
 {{ govukTable({
   classes: "govuk-!-margin-bottom-8",
   head: [
     {
-      text: "Product"
+      text: "File"
     },
     {
-      text: "Upload error"
+      text: "Reason"
     },
     {
-      text: "Other"
+      text: "Action"
+    },
+    {
+      text: "Dismiss"
     }
   ],
   rows: [
     [
       {
-        html: '<a href="#" class="govuk-link govuk-link--no-visited-state">Xeobia spray</a>'
+        html: 'lorem-ipsum'
       },
       {
-        text: "Yes"
+        text: "The uploaded file is not a ZIP file"
       },
       {
-        html: '<span class="govuk-visually-hidden">No</span>'
+        html: '<a href="#" class="govuk-link govuk-link--no-visited-state">Upload again<span class="govuk-visually-hidden">: File lorem-ipsum</span></a>'
+      },
+      {
+        html: '<a href="#" class="govuk-link govuk-link--no-visited-state">Dismiss<span class="govuk-visually-hidden">: Error for lorem-ipsum</span></a>'
       }
     ],
     [
       {
-        html: '<a href="#" class="govuk-link govuk-link--no-visited-state">Zimm Nail gloss</a>'
+        html: 'ipsos-ipsum-01'
       },
       {
-        text: "Yes"
+        text: "Wrong file type"
       },
       {
-        html: '<span class="govuk-visually-hidden">No</span>'
+        html: '<a href="#" class="govuk-link govuk-link--no-visited-state">Upload again<span class="govuk-visually-hidden">: File ipsos-ipsum-01</span></a>'
+      },
+      {
+        html: '<a href="#" class="govuk-link govuk-link--no-visited-state">Dismiss<span class="govuk-visually-hidden">: Error for ipsos-ipsum-01</span></a>'
       }
     ],
     [
       {
-        html: '<a href="#" class="govuk-link govuk-link--no-visited-state">Reimer Hair hold</a>'
+        html: 'loremupton-ipsum'
       },
       {
-        html: '<span class="govuk-visually-hidden">No</span>'
+        text: "The uploaded file is not a ZIP file"
       },
       {
-        text: "Yes"
+        html: '<a href="#" class="govuk-link govuk-link--no-visited-state">Upload again<span class="govuk-visually-hidden">: File loremupton-ipsum</span></a>'
+      },
+      {
+        html: '<a href="#" class="govuk-link govuk-link--no-visited-state">Dismiss<span class="govuk-visually-hidden">: Error for loremupton-ipsum</span></a>'
       }
     ]
   ]
@@ -93,16 +121,22 @@
       text: "Product"
     },
     {
-      text: "Last updated"
+      text: "Created"
+    },
+    {
+      text: "UK cosmetic product number"
     }
   ],
   rows: [
     [
       {
-        html: '<a href="#" class="govuk-link govuk-link--no-visited-state">Tesco shower gel</a>'
+        html: '<a href="#go-to-the-incomplete-product-page" class="govuk-link govuk-link--no-visited-state">Tesco shower gel</a>'
       },
       {
         text: "20 April 2021"
+      },
+      {
+        text: 'UKCP-3459222'
       }
     ],
     [
@@ -111,6 +145,9 @@
       },
       {
         text: "13 May 2021"
+      },
+      {
+        text: 'UKCP-8826113'
       }
     ]
   ]
@@ -151,7 +188,7 @@
         text: "28 July 2020"
       },
       {
-        text: 'UKN-337475933'
+        text: 'UKCP-337475933'
       }
     ],
     [
@@ -162,7 +199,7 @@
         text: "12 Feburary 2019"
       },
       {
-        text: 'UKN-229978799'
+        text: 'UKCP-229978799'
       }
     ],
     [
@@ -173,7 +210,7 @@
         text: "3 October 2019"
       },
       {
-        text: 'UKN-445399100'
+        text: 'UKCP-445399100'
       }
     ]
   ]
@@ -185,24 +222,24 @@
   classes: "govuk-!-margin-bottom-8 opss-tabs-min-height",
   items: [
     {
-      label: "Errors (3)",
-      id: "errors-tab",
+      label: "Notified (3)",
+      id: "notified-tab",
       panel: {
-        html: errorsHtml
+        html: notifiedHtml
       }
     },
     {
-      label: "Incomplete (0)",
+      label: "Incomplete (2)",
       id: "incomplete-tab",
       panel: {
         html: incompleteHtml
       }
     },
     {
-      label: "Notified (3)",
-      id: "notified-tab",
+      label: "Errors (3)",
+      id: "errors-tab",
       panel: {
-        html: notifiedHtml
+        html: errorsHtml
       }
     }
   ]
